# pyCircuit

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
binding/python/pycircuit/: __init__.py  dsl.py  hw.py  jit.py
compiler/frontend/pycircuit/: __init__.py  api_contract.py  cli.py  component.py  connectors.py  ct.py  design.py  hw.py  jit.py  tb.py  testbench.py
compiler/mlir/: CMakeLists.txt  README.md
compiler/mlir/build2/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  tablegen_compile_commands.yml
compiler/mlir/scripts/: build_all.sh
compiler/mlir/tools/: pyc-compile.cpp  pycc.cpp
contrib/fastfwd/: tb_fastfwd_pyc.sv
contrib/linx/docs/: LINXCORE_DSE_GUIDE.md  LINXCORE_META_REWRITE_PLAN.md  LINX_WORKSPACE.md  WSL_UBUNTU_ON_WINDOWS.md  ZYBO_Z7_20_LINX_PLATFORM.md  ZYBO_Z7_20_WINDOWS_SETUP.md
designs/BypassUnit/: README.md  __init__.py  bypass_unit.py  tb_bypass_unit.py
designs/IssueQueue/: README.md  __init__.py  issq.py  issq_config.py  tb_issq.py
designs/RegisterFile/: README.md  __init__.py  regfile.py  tb_regfile.py
designs/examples/: README.md  counter.py  counter_tb.py  counter_testgen.py  fifo_loopback.py  hier_modules.py  huge_hierarchy_stress.py  issue_queue_2picker.py  jit_control_flow.py  jit_pipeline_vec.py  multiclock_regs.py  template_arith_demo.py  template_cache_params.py  template_decode_rules_demo.py  template_instance_map_demo.py  template_interface_wiring_demo.py  template_module_collection_demo.py  template_pipeline_builder_demo.py  template_struct_transform_demo.py  wire_ops.py
designs/examples/arith/: arith.py  arith_config.py  tb_arith.py
designs/examples/cache_params/: cache_params.py  cache_params_config.py  tb_cache_params.py
designs/examples/calculator/: README.md  calculator.py  calculator_config.py  emulate_calculator.py  tb_calculator.py
designs/examples/counter/: counter.py  counter_config.py  tb_counter.py
designs/examples/decode_rules/: decode_rules.py  tb_decode_rules.py
designs/examples/digital_clock/: README.md  digital_clock.py  digital_clock_config.py  tb_digital_clock.py
designs/examples/fastfwd/: fastfwd.py  tb_fastfwd.py
designs/examples/fastfwd_pyc/: fastfwd_pyc.py  tb_fastfwd_pyc.cpp
designs/examples/fifo_loopback/: fifo_loopback.py  fifo_loopback_config.py  tb_fifo_loopback.py
designs/examples/hier_modules/: hier_modules.py  hier_modules_config.py  tb_hier_modules.py
designs/examples/huge_hierarchy_stress/: huge_hierarchy_stress.py  huge_hierarchy_stress_config.py  tb_huge_hierarchy_stress.py
designs/examples/instance_map/: instance_map.py  instance_map_config.py  tb_instance_map.py
designs/examples/interface_wiring/: interface_wiring.py  interface_wiring_config.py  tb_interface_wiring.py
designs/examples/issue_queue_2picker/: issue_queue_2picker.py  tb_issue_queue_2picker.py
doc/: pyCircuit_Tutorial.md
docs/: COMPILER_FLOW.md  CONST_METAPROGRAMMING.md  CYCLE_AWARE_API.md  DIAGNOSTICS.md  FRONTEND_API.md  IR_SPEC.md  LINXCORE_DSE_GUIDE.md  META_STRUCTURES.md  PIPELINE.md  PRIMITIVES.md  PyCircuit Programming Tutorial.md  QUICKSTART.md  SPEC_COLLECTIONS.md  SPEC_STRUCTURES.md  TEMPLATE_METAPROGRAMMING.md  TESTBENCH.md  USAGE.md  VERILOG_FLOW.md
examples/: README.md  counter.py  counter_cycle_aware.py  counter_testgen.py  fifo_loopback.py  hier_modules.py  issue_queue_2picker.py  jit_cache.py  jit_control_flow.py  jit_pipeline_vec.py  multiclock_regs.py  update_generated.sh  wire_ops.py
examples/calculator/: README.md  calculator.py  calculator_capi.cpp  emulate_calculator.py
examples/cpp/: tb_fifo.cpp
examples/digital_clock/: digital_clock_capi.cpp
examples/fastfwd_pyc/: fastfwd_pyc.py  tb_fastfwd_pyc.cpp  tb_fastfwd_pyc.sv
examples/issue_queue_2picker/: tb_issue_queue_2picker.sv
examples/linx_cpu/: tb_linx_cpu_pyc.sv
examples/linx_cpu_pyc/: decode.py  isa.py  linx_cpu_pyc.py  memory.py  pipeline.py  regfile.py  tb_linx_cpu_pyc.cpp  util.py
examples/linx_cpu_pyc_cycle_aware/: decode.py  linx_cpu_pyc.py
flows/scripts/: install_llvm_and_build.sh  lib.sh  pyc  run_examples.sh  run_sims.sh  run_sims_nightly.sh
flows/tools/: build_cpp_manifest.py  check_api_hygiene.py  discover_examples.py  gen_cmake_from_manifest.py  pyc_flow.py  run_fastfwd_pyc_cpp.sh  run_linx_cpu_pyc_cpp.sh
include/pyc/: README.md
include/pyc/cpp/: pyc_print.hpp  (+6 more)
janus/: PLAN.md  README.md  update_generated.sh
janus/programs_src/: coremark_lite.S  dhrystone_lite.S  test_lhi_signext.S
janus/tb/: tb_janus_bcc_ooo_pyc.cpp  tb_janus_bcc_ooo_pyc.sv  tb_janus_bcc_pyc.cpp  tb_janus_cube_pyc.cpp  tb_janus_cube_pyc.sv
janus/tools/: build_linx_memh.sh  build_linxisa_benchmarks_memh.sh  elf_to_memh.sh  patch_konata_app.sh  run_janus_bcc_ooo_pyc_cpp.sh  run_janus_bcc_ooo_pyc_sv.sh  run_janus_bcc_ooo_pyc_verilator.sh  run_janus_bcc_pyc_cpp.sh  run_janus_benchmarks.sh  run_janus_cube_pyc_cpp.sh  run_janus_cube_pyc_sv.sh  run_janus_cube_pyc_verilator.sh  run_janus_full_benchmarks.sh
pyc/mlir/: CMakeLists.txt  README.md
pyc/mlir/include/pyc/Dialect/PYC/: PYCOps.td
pyc/mlir/include/pyc/Emit/: CppEmitter.h  VerilogEmitter.h
pyc/mlir/include/pyc/Transforms/: Passes.h
pyc/mlir/lib/Dialect/PYC/: PYCDialect.cpp  PYCOps.cpp  PYCTypes.cpp
pyc/mlir/lib/Emit/: CppEmitter.cpp  VerilogEmitter.cpp
pyc/mlir/lib/Transforms/: CheckCombCyclesPass.cpp  CheckFlatTypesPass.cpp  CheckNoDynamicPass.cpp  CombCanonicalizePass.cpp  EliminateWiresPass.cpp  FuseCombPass.cpp  LowerSCFToPYCStaticPass.cpp  PackI1RegsPass.cpp  PrunePortsPass.cpp
pyc/mlir/tools/: pyc-compile.cpp  pyc-opt.cpp
python/pycircuit/: __init__.py  cli.py  design.py  dsl.py  hw.py  jit.py  tb.py
runtime/cpp/: pyc_connector.hpp  pyc_sim.hpp
scripts/: lib.sh
tools/: dse_fastfwd_pyc.sh  linx_trace_diff.py  pyc_flow.py  run_fastfwd_pyc_cpp.sh  run_linx_cpu_pyc_cpp.sh  run_linx_qemu_vs_pyc.sh  schematic_view.py  visualize_cpp.py
tools/linxisa/: elf_to_memh.py
(+207 files in other folders)
