[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pycircuit"
version = "0.0.0"
description = "pyCircuit prototype Python frontend for the PYC MLIR hardware IR."
requires-python = ">=3.9"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["hardware", "rtl", "verilog", "systemverilog", "mlir"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Code Generators",
]

[tool.setuptools.packages.find]
where = ["binding/python"]

[project.scripts]
pycircuit = "pycircuit.cli:main"
